--- a/TESTING.ipynb
+++ b/TESTING.ipynb
@@ -53,6 +53,36 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from dataclasses import dataclass, field\n",
+        "\n",
+        "@dataclass\n",
+        "class QuantitativeHistogram:\n",
+        "    \n",
+        "    project: str\n",
+        "    experiment: str\n",
+        "    compound: str = field(default=None)\n",
+        "    region: str = field(default=None)\n",
+        "    compounds: list = field(default=None)\n",
+        "    regions: list = field(default=None)\n",
+        "    \n",
+        "    def __post_init__(self):\n",
+        "        print(self.project, self.experiment)\n",
+        "        if self.compounds and isinstance(self.compounds, list) and self.region and isinstance(self.region, str):\n",
+        "            print(f\"plotting compounds {self.compounds} in region {self.region}\")\n",
+        "        elif self.compound  and isinstance(self.region, str) and self.regions and  isinstance(self.compounds, list):\n",
+        "            print(f\"plotting compound {self.compound} in regions {self.regions} in \")\n",
+        "        else:\n",
+        "            raise ValueError(\"Please specify at least one compound and one region\")\n",
+        "        \n",
+        "QuantitativeHistogram('TEST', 'TEST', regions=['OF'], compounds='5HTP')"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 2,
       "metadata": {},
       "outputs": [
