commit to bisect

--- a/TESTING.ipynb
+++ b/TESTING.ipynb
@@ -81,7 +81,7 @@
       ],
       "source": [
         "from module.core.Figure import Histogram\n",
-        "Histogram('TCB2', experiment=\"dose response\", compound=\"5HIAA/5HT\", region=['OF'], from_scratch=True, remove_outliers=False)\n",
+        "Histogram('TCB2', experiment=\"dose response\", compound=\"5HIAA/5HT\", region=['OF', 'PL'], from_scratch=True, remove_outliers=False)\n",
         "# Histogram('TCB2', compound=\"5HIAA/5HT\", region=['CE'], from_scratch=True, handle_outliers=False)\n",
         "# Histogram('TCB2', compound=\"5HIAA/5HT\", region=['CE'], from_scratch=True)\n",
         "# Histogram('TCB2', compound=\"5HIAA/5HT\", from_scratch=True)"
