functional notebook no outputs

--- a/INTERFACE.ipynb
+++ b/INTERFACE.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,179 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Preparing statistical groupings for weight: 100%|██████████| 25/25 [00:00<00:00, 4771.03it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ac5c9ebf55841658ca832150a9f61d7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Calculating statistics:   0%|          | 0/25 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CREATED AND CACHED /Users/jasminebutler/Desktop/phd/PROJECTS/TCB-2/weight/weight in ['OF', 'PL', 'aCC', 'M1', 'SJ', 'S1L', 'S1R', 'AC', 'V1', 'A', 'dH', 'vH', 'NAc', 'VM', 'DM', 'VL', 'DL', 'MD', 'VPL', 'VPR', 'DLG', 'HY', 'SC', 'SN', 'VTA', 'DR', 'MR', 'CB'] STATS.xlsx\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th>test</th>\n",
-       "      <th>one_way_anova</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>compound</th>\n",
-       "      <th>weight</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>OF</th>\n",
-       "      <td>F(5, 58) = 1.73, p = 0.14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PL</th>\n",
-       "      <td>F(5, 58) = 1.67, p = 0.16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>aCC</th>\n",
-       "      <td>F(5, 58) = 0.31, p = 0.91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SJ</th>\n",
-       "      <td>F(5, 58) = 1.45, p = 0.22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>S1R</th>\n",
-       "      <td>F(5, 58) = 0.4, p = 0.85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AC</th>\n",
-       "      <td>F(5, 58) = 0.73, p = 0.61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>V1</th>\n",
-       "      <td>F(5, 58) = 0.97, p = 0.45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A</th>\n",
-       "      <td>F(5, 58) = 0.46, p = 0.81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>dH</th>\n",
-       "      <td>F(5, 58) = 0.3, p = 0.91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>vH</th>\n",
-       "      <td>F(5, 58) = 0.83, p = 0.53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VM</th>\n",
-       "      <td>F(5, 58) = 2.39, p = 0.05 *</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DM</th>\n",
-       "      <td>F(5, 58) = 0.73, p = 0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VL</th>\n",
-       "      <td>F(5, 58) = 0.59, p = 0.71</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DL</th>\n",
-       "      <td>F(5, 58) = 0.56, p = 0.73</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MD</th>\n",
-       "      <td>F(5, 58) = 1.32, p = 0.27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VPL</th>\n",
-       "      <td>F(5, 58) = 2.1, p = 0.08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VPR</th>\n",
-       "      <td>F(5, 58) = 1.06, p = 0.39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DLG</th>\n",
-       "      <td>F(5, 58) = 0.64, p = 0.67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>HY</th>\n",
-       "      <td>F(5, 58) = 1.75, p = 0.14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SC</th>\n",
-       "      <td>F(5, 57) = 2.56, p = 0.04 *</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SN</th>\n",
-       "      <td>F(5, 58) = 0.76, p = 0.59</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VTA</th>\n",
-       "      <td>F(5, 58) = 0.81, p = 0.55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DR</th>\n",
-       "      <td>F(5, 58) = 0.9, p = 0.49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MR</th>\n",
-       "      <td>F(5, 58) = 1.42, p = 0.23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CB</th>\n",
-       "      <td>F(5, 58) = 0.63, p = 0.68</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "StatisticsTable(project='TCB-2', experiment='weight', treatment=None, compound='weight', region=['OF', 'PL', 'aCC', 'M1', 'SJ', 'S1L', 'S1R', 'AC', 'V1', 'A', 'dH', 'vH', 'NAc', 'VM', 'DM', 'VL', 'DL', 'MD', 'VPL', 'VPR', 'DLG', 'HY', 'SC', 'SN', 'VTA', 'DR', 'MR', 'CB'], remove_outliers=None, data_source='hplc', p_value_threshold=0.05, pool=None, statistics_pipeline=None, filepath=\"/Users/jasminebutler/Desktop/phd/PROJECTS/TCB-2/weight/weight in ['OF', 'PL', 'aCC', 'M1', 'SJ', 'S1L', 'S1R', 'AC', 'V1', 'A', 'dH', 'vH', 'NAc', 'VM', 'DM', 'VL', 'DL', 'MD', 'VPL', 'VPR', 'DLG', 'HY', 'SC', 'SN', 'VTA', 'DR', 'MR', 'CB'] STATS.xlsx\", from_scratch=True, custom_params={}, figure_type='table')"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TISSUE WEIGHT stats  \n",
     "from module.core.Figure import StatisticsTable, Histogram, QuantitativeDataSelection\n",
@@ -215,7 +45,8 @@
     "                          region=legit_regions, \n",
     "                          from_scratch=True\n",
     "                          )\n",
-    "# table.statistics_table.select(is_significant=True)"
+    "# table.statistics_table.select(is_significant=True)\n",
+    "table"
    ]
   },
   {
@@ -257,260 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>p_value</th>\n",
-       "      <th>is_significant</th>\n",
-       "      <th>result</th>\n",
-       "      <th>test</th>\n",
-       "      <th>p_value_threshold</th>\n",
-       "      <th>project</th>\n",
-       "      <th>experiment</th>\n",
-       "      <th>compound</th>\n",
-       "      <th>region</th>\n",
-       "      <th>fully_significant</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.023</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Source     SS    DF     MS       F  p-u...</td>\n",
-       "      <td>two_way_anova</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>TCB-2</td>\n",
-       "      <td>agonist antagonist</td>\n",
-       "      <td>5HT</td>\n",
-       "      <td>AC</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.00014</td>\n",
-       "      <td>True</td>\n",
-       "      <td>F  p_value\n",
-       "0  8.802244  0.00014</td>\n",
-       "      <td>one_way_anova</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>TCB-2</td>\n",
-       "      <td>agonist antagonist</td>\n",
-       "      <td>5HT</td>\n",
-       "      <td>AC</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>[[(3mg/kg TCB-2, vehicles), (TCB-2 + MDL, vehi...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>group1        group2  meandiff   p-ad...</td>\n",
-       "      <td>tukey</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>TCB-2</td>\n",
-       "      <td>agonist antagonist</td>\n",
-       "      <td>5HT</td>\n",
-       "      <td>AC</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.028</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Source     SS    DF     MS      F  p-un...</td>\n",
-       "      <td>two_way_anova</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>TCB-2</td>\n",
-       "      <td>agonist antagonist</td>\n",
-       "      <td>DA</td>\n",
-       "      <td>CB</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.029231</td>\n",
-       "      <td>True</td>\n",
-       "      <td>F   p_value\n",
-       "0  3.359184  0.029231</td>\n",
-       "      <td>one_way_anova</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>TCB-2</td>\n",
-       "      <td>agonist antagonist</td>\n",
-       "      <td>DA</td>\n",
-       "      <td>CB</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[[(0,3mg/kg TCB-2, 10mg/kg TCB-2), (0,3mg/kg T...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>group1         group2  meandiff   p...</td>\n",
-       "      <td>tukey</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>TCB-2</td>\n",
-       "      <td>dose response</td>\n",
-       "      <td>5HT</td>\n",
-       "      <td>vH</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.000175</td>\n",
-       "      <td>True</td>\n",
-       "      <td>F   p_value\n",
-       "0  8.659429  0.000175</td>\n",
-       "      <td>one_way_anova</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>TCB-2</td>\n",
-       "      <td>dose response</td>\n",
-       "      <td>HVA</td>\n",
-       "      <td>vH</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[[(0,3mg/kg TCB-2, 10mg/kg TCB-2), (10mg/kg TC...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>group1         group2  meandiff   p...</td>\n",
-       "      <td>tukey</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>TCB-2</td>\n",
-       "      <td>dose response</td>\n",
-       "      <td>HVA</td>\n",
-       "      <td>vH</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.000124</td>\n",
-       "      <td>True</td>\n",
-       "      <td>F   p_value\n",
-       "0  8.942181  0.000124</td>\n",
-       "      <td>one_way_anova</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>TCB-2</td>\n",
-       "      <td>dose response</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>vH</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[[(0,3mg/kg TCB-2, 10mg/kg TCB-2), (0,3mg/kg T...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>group1         group2  meandiff   p...</td>\n",
-       "      <td>tukey</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>TCB-2</td>\n",
-       "      <td>dose response</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>vH</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>196 rows × 10 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              p_value  is_significant  \\\n",
-       "0                                               0.023            True   \n",
-       "1                                             0.00014            True   \n",
-       "2   [[(3mg/kg TCB-2, vehicles), (TCB-2 + MDL, vehi...            True   \n",
-       "0                                               0.028            True   \n",
-       "1                                            0.029231            True   \n",
-       "..                                                ...             ...   \n",
-       "1   [[(0,3mg/kg TCB-2, 10mg/kg TCB-2), (0,3mg/kg T...            True   \n",
-       "0                                            0.000175            True   \n",
-       "1   [[(0,3mg/kg TCB-2, 10mg/kg TCB-2), (10mg/kg TC...            True   \n",
-       "0                                            0.000124            True   \n",
-       "1   [[(0,3mg/kg TCB-2, 10mg/kg TCB-2), (0,3mg/kg T...            True   \n",
-       "\n",
-       "                                               result           test  \\\n",
-       "0          Source     SS    DF     MS       F  p-u...  two_way_anova   \n",
-       "1                     F  p_value\n",
-       "0  8.802244  0.00014  one_way_anova   \n",
-       "2            group1        group2  meandiff   p-ad...          tukey   \n",
-       "0          Source     SS    DF     MS      F  p-un...  two_way_anova   \n",
-       "1                   F   p_value\n",
-       "0  3.359184  0.029231  one_way_anova   \n",
-       "..                                                ...            ...   \n",
-       "1              group1         group2  meandiff   p...          tukey   \n",
-       "0                   F   p_value\n",
-       "0  8.659429  0.000175  one_way_anova   \n",
-       "1              group1         group2  meandiff   p...          tukey   \n",
-       "0                   F   p_value\n",
-       "0  8.942181  0.000124  one_way_anova   \n",
-       "1              group1         group2  meandiff   p...          tukey   \n",
-       "\n",
-       "    p_value_threshold project          experiment compound region  \\\n",
-       "0                0.05   TCB-2  agonist antagonist      5HT     AC   \n",
-       "1                0.05   TCB-2  agonist antagonist      5HT     AC   \n",
-       "2                0.05   TCB-2  agonist antagonist      5HT     AC   \n",
-       "0                0.05   TCB-2  agonist antagonist       DA     CB   \n",
-       "1                0.05   TCB-2  agonist antagonist       DA     CB   \n",
-       "..                ...     ...                 ...      ...    ...   \n",
-       "1                0.05   TCB-2       dose response      5HT     vH   \n",
-       "0                0.05   TCB-2       dose response      HVA     vH   \n",
-       "1                0.05   TCB-2       dose response      HVA     vH   \n",
-       "0                0.05   TCB-2       dose response       NA     vH   \n",
-       "1                0.05   TCB-2       dose response       NA     vH   \n",
-       "\n",
-       "    fully_significant  \n",
-       "0                True  \n",
-       "1                True  \n",
-       "2                True  \n",
-       "0                True  \n",
-       "1                True  \n",
-       "..                ...  \n",
-       "1                True  \n",
-       "0                True  \n",
-       "1                True  \n",
-       "0                True  \n",
-       "1                True  \n",
-       "\n",
-       "[196 rows x 10 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#INSPECT COMPOUND DATA and STATS\n",
     "from module.core import  HPLC, Statistics, QuantitativeStatistic\n",
