notebook updaraed run code

--- a/INTERFACE.ipynb
+++ b/INTERFACE.ipynb
@@ -138,11 +138,12 @@
     "HVA_DA_sig_twoway = [ 'VTA']\n",
     "\n",
     "\n",
+    "\n",
     "from module.core.Figure import Histogram\n",
     "hist = Histogram(project = 'TCB-2', \n",
-    "                experiment=None, # dose response / agonist antagonist / None / weight\n",
-    "                compound='neurotransmitters', # 5HIAA/5HT \n",
-    "                region= ['OF'], #list\n",
+    "                experiment='agonist antagonist', # dose response / agonist antagonist / None / weight\n",
+    "                compound='DA', # 5HIAA/5HT \n",
+    "                region= legit_regions, #list\n",
     "                from_scratch=True, \n",
     "                remove_outliers='calculated', # calculated / eliminated / False\n",
     "                # custom_params={\"fig_width\": 20},  # fixed fig with bar width vaires \n",
@@ -228,6 +229,7 @@
     "                region= 'thalamocortical_interaction', # 'thalamocortical_interaction'\n",
     "                from_scratch=True, \n",
     "                remove_outliers='calculated', # calculated / eliminated / False\n",
+    "                # custom_params = {'show_edge_labels':True} , \n",
     "                )\n",
     "\n",
     "# print (REGION_CLASSES['thalamocortical_interaction'])"
