--- a/INTERFACE.ipynb
+++ b/INTERFACE.ipynb
@@ -179,9 +179,9 @@
     "\n",
     "Correlation(project ='TCB-2', \n",
     "                experiment='agonist antagonist', \n",
-    "                treatment = 'vehicles',\n",
-    "                compound='NA-5HT', \n",
-    "                region= ['OF','OF'], \n",
+    "                treatment = '3mg/kg TCB-2',\n",
+    "                compound='5HT', \n",
+    "                region= ['S1L','aCC'], \n",
     "                from_scratch=True, \n",
     "                remove_outliers='calculated', # calculated / eliminated / False\n",
     "                )"
@@ -198,11 +198,49 @@
     "\n",
     "Correlogram(project ='TCB-2', \n",
     "                # experiment='agonist antagonist', \n",
-    "                compound='DA',  # 'monoamines'\n",
+    "                compound='5HT',  # 'monoamines'\n",
     "                region= 'TCB2_regions', \n",
     "                from_scratch=True, \n",
     "                remove_outliers='calculated', # calculated / eliminated / False\n",
     "                )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "legit_regions = [\n",
+    "    \"OF\",\n",
+    "    \"PL\",\n",
+    "    \"aCC\",\n",
+    "    \"M1\",\n",
+    "    \"SJ\",\n",
+    "    \"S1L\",\n",
+    "    \"S1R\",\n",
+    "    \"AC\",\n",
+    "    \"V1\",\n",
+    "    \"MD\",\n",
+    "    \"VPL\",\n",
+    "    \"VPR\",\n",
+    "    \"DLG\",\n",
+    "    \"DM\",\n",
+    "    \"DL\",\n",
+    "    \"VM\",\n",
+    "    \"VL\",\n",
+    "    \"NAc\",\n",
+    "    \"SN\",\n",
+    "    \"VTA\",\n",
+    "    \"DR\",\n",
+    "    \"MR\",\n",
+    "    \"HY\",\n",
+    "    \"dH\",\n",
+    "    \"vH\",\n",
+    "    \"A\",\n",
+    "    \"SC\",\n",
+    "    \"CB\"\n",
+    "  ]"
    ]
   },
   {
@@ -219,12 +257,15 @@
     "Network(project ='TCB-2', \n",
     "                # experiment='agonist antagonist', \n",
     "                compound='5HT', \n",
-    "                region= 'TCB2_regions', # 'dopamine_vibes' / 'thalamocortical_interaction' / 'TCB2_regions'\n",
+    "                region= 'TCB2_condensed', # 'dopamine_vibes' / 'thalamocortical_interaction' / 'TCB2_regions'\n",
     "                from_scratch=True, \n",
     "                remove_outliers='calculated', # calculated / eliminated / False\n",
-    "                # custom_params = {'show_edge_labels':True} , \n",
+    "                # custom_params = { 'edge_thickness': 1} , #'show_edge_labels':True,\n",
     "                )\n",
     "\n",
+    "#NA     Reds\n",
+    "#DA     Blues\n",
+    "#5HT    Oranges\n",
     "\n",
     "# print (REGION_CLASSES['thalamocortical_interaction'])"
    ]
